--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>IT Host - Hosting Template</title>
+	<title>NIU CoB - Welcome Tour</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cloud 83 - hosting template ">
 	<meta name="keywords" content="cloud, hosting, creative, html">
@@ -63,9 +63,9 @@
 			<div class="hero-content text-white">
 				<div class="row">
 					<div class="col-lg-6 pr-0">
-						<h2>Unbeatable Offers</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. </p>
-						<a href="#" class="site-btn">Get your plan</a>
+						<h2>Welcome to NIU</h2>
+						<p>The College of Business has a lot to offer. Click the tour button below to explore Barsema Hall.</p>
+						<a href="#" class="site-btn">Start Tour</a>
 					</div>
 				</div>
 			</div>
