--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
 
 	<!-- Hero section -->
-	<section class="hero-section set-bg" data-setbg="img/NIU.jpg">	
+	<section class="hero-section set-bg" data-setbg="img/bh.png">	
 		<div class="container h-100">
 			<div class="hero-content text-white">
 				<div class="row">
 					<div class="col-lg-6 pr-0">
-						<h2>Welcome to NIU</h2>
-						<p>The College of Business has a lot to offer. Click the tour button below to explore Barsema Hall.</p>
+						<h2 class="strokeme">Welcome to NIU</h2>
+						<p class="strokeme">The College of Business has a lot to offer. Click below to explore Barsema Hall.</p>
 						<a href="#" class="site-btn">Start Tour</a>
 					</div>
 				</div>
