--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>IT Host - Hosting Template</title>
+	<title>About Barsema</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cloud 83 - hosting template ">
 	<meta name="keywords" content="cloud, hosting, creative, html">
@@ -46,9 +46,9 @@
 			</div>
 			<ul class="main-menu">
 				<li><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About us</a></li>
-				<li><a href="./service.html">Services</a></li>
-				<li><a href="./blog.html">News</a></li>
+				<li><a href="./about.html">About</a></li>
+				<li><a href="./geomap.html">Tour</a></li>
+				<li><a href="./notification.html">Notification</a></li>
 				<li><a href="./contact.html">Contact</a></li>
 			</ul>
 		</div>
