--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
 			</div>
 			<ul class="main-menu">
 				<li><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About us</a></li>
-				<li><a href="./service.html">Services</a></li>
-				<li><a href="./blog.html">News</a></li>
+				<li><a href="./about.html">About</a></li>
+				<li><a href="./geomap.html">Tour</a></li>
+				<li><a href="./notification.html">Notification</a></li>
 				<li><a href="./contact.html">Contact</a></li>
 			</ul>
 		</div>
