--- a/geomap.html
+++ b/geomap.html
@@ -74,9 +74,11 @@
 			<div class="section-title">
 
 	<!-- Geotracking here -->
-	
+				
 					<p>Click the button to get your coordinates.</p>
 					<button onclick="getLocation()">Try It</button>
+					<br>
+					<br>
 
 					<p id="demo"></p>
 
@@ -121,6 +123,13 @@
 					<div class="service-box-text text-white">
 						<h4>Our Vission</h4>
 						<p>Lacinia ex eleifend orci porttitor, suscipit interdum augue cond-imentum. Etiam pretium turpis eget nibh laoreet iaculis. Vivamus auctor mi eget odio feugiat, quis aliquet velit ornare. Integer eges-tas sit amet neque sed elementum. Fusce ut turpis felis. Etiam pretium pharetra augue, ac porttitor dolor consequat eget. Cras tempor suscipit enim vehicula ultrices. Mauris sed orci blandit, rhoncus massa non.</p>
+						<a href="#" class="site-btn">Read More</a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 p-0 service-box">
+					<div class="service-box-text text-white">
+						<h4>Our Mission</h4>
+						<p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget nibh laoreet iaculis. Vivamus auctor mi eget odio feugiat, quis aliquet velit ornare. Inte-ger egestas sit amet neque sed elementum. Fusce ut turpis felis. Etiam pretium pharetra augue, ac porttitor dolor consequat eget. Cras tempor suscipit enim vehicula ultrices. Mauris sed orci blan-dit, rhoncus massa non, tincidunt odio. </p>
 						<a href="#" class="site-btn">Read More</a>
 					</div>
 				</div>
