--- a/notification.html
+++ b/notification.html
@@ -57,9 +57,9 @@
 	<!-- Page Top section -->
 	<section class="page-top-section set-bg" data-setbg="img/page-top-bg.jpg">
 		<div class="container">
-			<h2>Blog</h2>
+			<h2>Notification</h2>
 			<div class="site-breadcrumb">
-				<a href="home">Home</a> / <span>Blog</span>
+				<a href="home">Home</a> / <span>Notification</span>
 			</div>
 		</div>
 	</section>
