--- a/geomap.html
+++ b/geomap.html
@@ -98,7 +98,7 @@
 						"<br>Speed: " + position.coords.speed;
 					}
 					</script>
-				<img src="geomapbg.jpg">
+				<img src="img/geomapbg.jpg">
 
 			</div>
 		</div>
