--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="./index.html" class="site-logo"><img src="./img/logo.png" alt=""></a>
+		<a href="./index.html" class="site-logo"><img src="./img/logot.png" alt=""></a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
